# InverseCO2

./: .gitignore  CMakeLists.txt  Makefile  README.md  co2gpt.py  mini.py  optimizeHyperpara.cc  torch-optimize.cc  vimrc
data/: flux.csv  gen_prior.py  prior.csv  prior_new.csv
data/hhsd/: 202301010000_113.643303_34.908848_40_foot.nc  202301010100_113.643303_34.908848_40_foot.nc  202301010200_113.643303_34.908848_40_foot.nc  202301010300_113.643303_34.908848_40_foot.nc  202301010400_113.643303_34.908848_40_foot.nc  202301010500_113.643303_34.908848_40_foot.nc  202301010600_113.643303_34.908848_40_foot.nc  202301010700_113.643303_34.908848_40_foot.nc  202301010800_113.643303_34.908848_40_foot.nc  202301010900_113.643303_34.908848_40_foot.nc  202301011000_113.643303_34.908848_40_foot.nc  202301011100_113.643303_34.908848_40_foot.nc  202301011200_113.643303_34.908848_40_foot.nc  202301011300_113.643303_34.908848_40_foot.nc  202301011400_113.643303_34.908848_40_foot.nc  202301011500_113.643303_34.908848_40_foot.nc  202301011600_113.643303_34.908848_40_foot.nc  202301011700_113.643303_34.908848_40_foot.nc  202301011800_113.643303_34.908848_40_foot.nc  202301011900_113.643303_34.908848_40_foot.nc  202301012000_113.643303_34.908848_40_foot.nc  202301012100_113.643303_34.908848_40_foot.nc  202301012200_113.643303_34.908848_40_foot.nc  202301012300_113.643303_34.908848_40_foot.nc  202301020000_113.643303_34.908848_40_foot.nc  202301020100_113.643303_34.908848_40_foot.nc  202301020200_113.643303_34.908848_40_foot.nc  202301020300_113.643303_34.908848_40_foot.nc  (+720 more)
